# os_lab3

./: CMakePresets.json  README.md
include/: MarkerThread.h  SharedResources.h
src/: CMakeLists.txt  Main.cpp  MarkerThread.cpp  SharedResources.cpp
tests/: CMakeLists.txt  MarkerThreadTests.cpp
